# manage_excel_sheets_and_files

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  REVIEW.md  SECURITY.md  Test.py  manage_excel.py  manage_excel_GUI.py  pyproject.toml  requirements.txt
NewVersion/: CODE_OF_CONDUCT.md  README.md  pyproject.toml
NewVersion/.github/workflows/: ci.yml
NewVersion/excelmgr/adapters/: _utils.py  atomic.py  json_logger.py  local_storage.py  pandas_io.py  xls_protection.py
NewVersion/excelmgr/cli/: main.py  options.py
NewVersion/excelmgr/config/: settings.py
NewVersion/excelmgr/core/: combine.py  delete_cols.py  errors.py  models.py  naming.py  sinks.py  split.py
NewVersion/excelmgr/ports/: readers.py  security.py  writers.py
NewVersion/tests/: conftest.py  test_cli_e2e.py  test_cli_help.py  test_delete_match.py  test_naming.py  test_passwords.py
data/: Sample_Data.xlsx
src/adapters/: json_logger.py  pandas_io.py  xls_protection.py
src/cli/: main.py
src/core/: combine.py  delete_cols.py  errors.py  models.py  passwords.py  sinks.py  split.py
src/excelmgr/adapters/: atomic.py  cloud.py  database.py  json_logger.py  local_storage.py  pandas_io.py  xls_protection.py
src/excelmgr/cli/: interactive.py  main.py  options.py
src/excelmgr/core/: sinks.py  (+11 more)
tests/: conftest.py  exp_test2.py  experimental_tests.py  test.py  test_cli_e2e.py  test_cli_help.py  test_cli_interactive.py  test_combine.py  test_delete_match.py  test_naming.py  test_sinks.py  test_split.py  test_unicode_encoding.py  unittest_test.py
tests/new_version/: conftest.py  test_cli_e2e.py  test_cli_help.py  test_combine.py  test_delete_match.py  test_naming.py  test_passwords.py
(+6 files in other folders)
