[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "excelmgr"
version = "0.2.0"
description = "Enterprise-grade CLI to combine, split, and bulk-edit Excel workbooks."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
  "pandas>=2.1,<3.0",
  "openpyxl>=3.1,<4.0",
  "typer>=0.12,<0.13",
  "rich>=13.7,<14.0",
  "msoffcrypto-tool>=5.1",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<6.0",
  "mypy>=1.10,<2.0",
  "ruff>=0.5.6,<1.0",
  "pre-commit>=3.7,<4.0",
  "build>=1.2,<2.0",
  "types-PyYAML",
  "bandit>=1.7,<2.0"
]

[project.scripts]
excelmgr = "excelmgr.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/excelmgr"]

[tool.hatch.build.targets.sdist]
include = ["src/excelmgr", "pyproject.toml", "README.md", "LICENSE", "SECURITY.md", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q --cov=excelmgr --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["excelmgr"]

[tool.coverage.report]
skip_empty = true
show_missing = true
